--- a/DataGo/en.lproj/MainStoryboard.storyboard
+++ b/DataGo/en.lproj/MainStoryboard.storyboard
@@ -170,6 +170,11 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="YUT-kq-5SM">
+                        <barButtonItem key="leftBarButtonItem" title="周" id="2Ts-Zv-3Kz">
+                            <connections>
+                                <action selector="switchPeriod:" destination="2" id="afg-rc-yNt"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Tools" id="VlY-oU-CCP">
                             <connections>
                                 <action selector="showHideTools:" destination="2" id="lav-Qc-0w9"/>
@@ -443,57 +448,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="ClothViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ClothViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="DetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
-        </class>
-        <class className="OrderViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OrderViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="allTrades:"/>
-                <relationship kind="action" name="closedTrades:"/>
-                <relationship kind="action" name="notPayTrades:"/>
-                <relationship kind="action" name="payTrades:"/>
-                <relationship kind="action" name="sentTrades:"/>
-                <relationship kind="action" name="showHideTools:"/>
-                <relationship kind="action" name="updateData:"/>
-                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
-                <relationship kind="outlet" name="rootView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="toolView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="SentViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SentViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="SplashViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SplashViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="passField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="StatViewController" superclassName="DetailViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/StatViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="TopSessionController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopSessionController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
