--- a/DataGo/en.lproj/MainStoryboard.storyboard
+++ b/DataGo/en.lproj/MainStoryboard.storyboard
@@ -359,13 +359,36 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="wIA-r8-mIx"/>
+                    <navigationItem key="navigationItem" id="wIA-r8-mIx">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" title="无进价商品" id="e8R-kn-26F">
+                            <connections>
+                                <action selector="showItems:" destination="gV8-Ae-jNd" id="Ipk-Mh-40a"/>
+                            </connections>
+                        </barButtonItem>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="input to search" textAlignment="center" minimumFontSize="17" id="rMw-CL-Z4W">
+                            <rect key="frame" x="96" y="7" width="128" height="31"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            <connections>
+                                <action selector="showSearchedItems:" destination="gV8-Ae-jNd" eventType="editingDidEnd" id="SnK-KB-jrs"/>
+                                <outlet property="delegate" destination="gV8-Ae-jNd" id="EAS-4j-V1c"/>
+                            </connections>
+                        </textField>
+                        <barButtonItem key="rightBarButtonItem" title="更新" id="x20-gx-LI4">
+                            <connections>
+                                <action selector="refreshData:" destination="gV8-Ae-jNd" id="DWu-fF-J3Y"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="searchField" destination="rMw-CL-Z4W" id="M0j-kE-jFe"/>
                         <outlet property="tableView" destination="lNz-K7-cRF" id="5bs-Mb-Cel"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1179" y="541"/>
+            <point key="canvasLocation" x="1179" y="566"/>
         </scene>
         <!--Navigation Controller - 销售-->
         <scene sceneID="Jsz-YZ-hPN">
@@ -448,6 +471,62 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="ClothViewController" superclassName="DetailViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ClothViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="refreshData:"/>
+                <relationship kind="action" name="showItems:"/>
+                <relationship kind="action" name="showSearchedItems:"/>
+                <relationship kind="outlet" name="searchField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="DetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+        </class>
+        <class className="OrderViewController" superclassName="DetailViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OrderViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="allTrades:"/>
+                <relationship kind="action" name="closedTrades:"/>
+                <relationship kind="action" name="notPayTrades:"/>
+                <relationship kind="action" name="payTrades:"/>
+                <relationship kind="action" name="sentTrades:"/>
+                <relationship kind="action" name="showHideTools:"/>
+                <relationship kind="action" name="switchPeriod:"/>
+                <relationship kind="action" name="updateData:"/>
+                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="rootView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="toolView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="SentViewController" superclassName="DetailViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SentViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="SplashViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SplashViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="passField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="StatViewController" superclassName="DetailViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StatViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="TopSessionController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopSessionController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
