--- a/DataGo/en.lproj/MainStoryboard.storyboard
+++ b/DataGo/en.lproj/MainStoryboard.storyboard
@@ -198,24 +198,64 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
                 <viewController title="统计" id="3" customClass="StatViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="17">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" id="w8m-06-EpS">
-                                <rect key="frame" x="-54" y="-20" width="374" height="387"/>
+                                <rect key="frame" x="-54" y="-20" width="374" height="431"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
+                            <view contentMode="scaleToFill" id="jFc-YL-XoB">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="fCv-Qi-otL">
+                                        <rect key="frame" x="0.0" y="-2" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                        <items>
+                                            <barButtonItem title="&lt;&lt;&lt;---" id="wGw-PY-hlY">
+                                                <connections>
+                                                    <action selector="goPrevious:" destination="3" id="Mnt-u4-FA7"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="--->>>" id="JtS-AI-GTr">
+                                                <connections>
+                                                    <action selector="goNext:" destination="3" id="W1K-w9-OeG"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" id="uUO-zI-Kgl">
+                                                <textField key="customView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" id="w71-wr-ZpG">
+                                                    <rect key="frame" x="134" y="7" width="125" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </barButtonItem>
+                                            <barButtonItem title="更新" id="FT2-rl-mNA">
+                                                <connections>
+                                                    <action selector="reCal:" destination="3" id="xKs-wT-MVZ"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="37Y-s0-Iuw"/>
+                    <tabBarItem key="tabBarItem" title="统计" id="cqb-0C-Bab"/>
+                    <navigationItem key="navigationItem" id="37Y-s0-Iuw">
+                        <nil key="title"/>
+                    </navigationItem>
                     <connections>
+                        <outlet property="infoText" destination="w71-wr-ZpG" id="PGq-dQ-aaa"/>
                         <outlet property="infoView" destination="w8m-06-EpS" id="pRa-Dy-LjO"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="2215" y="-138"/>
+            <point key="canvasLocation" x="1532" y="-138"/>
         </scene>
         <!--Sent View Controller - 发货-->
         <scene sceneID="osI-if-Bd7">
@@ -276,9 +316,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     </tabBar>
                     <connections>
                         <segue destination="xdl-fR-RPL" kind="relationship" relationship="viewControllers" id="26"/>
-                        <segue destination="U79-M4-Q7V" kind="relationship" relationship="viewControllers" id="27"/>
                         <segue destination="BWB-0g-DPB" kind="relationship" relationship="viewControllers" id="JIe-j6-4cc"/>
                         <segue destination="PTc-wu-QjC" kind="relationship" relationship="viewControllers" id="wla-vf-Kt0"/>
+                        <segue destination="3" kind="relationship" relationship="viewControllers" id="Sgl-Qq-P2b"/>
                     </connections>
                 </tabBarController>
             </objects>
@@ -465,25 +505,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="653" y="-138"/>
         </scene>
-        <!--Navigation Controller - 统计-->
-        <scene sceneID="9oh-bS-WCl">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="trE-Mw-grf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController title="统计" id="U79-M4-Q7V" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="统计" image="second" id="6"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="38Q-bO-Mr3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="3" kind="relationship" relationship="rootViewController" id="9br-G6-6mc"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="1689" y="-138"/>
-        </scene>
         <!--Navigation Controller - 进货-->
         <scene sceneID="1bh-S1-LS1">
             <objects>
@@ -525,7 +546,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
     </scenes>
     <resources>
         <image name="first" width="16" height="16"/>
-        <image name="second" width="16" height="16"/>
     </resources>
     <classes>
         <class className="ClothViewController" superclassName="DetailViewController">
@@ -583,6 +603,11 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="StatViewController" superclassName="DetailViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StatViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goNext:"/>
+                <relationship kind="action" name="goPrevious:"/>
+                <relationship kind="action" name="goSomeDay:"/>
+                <relationship kind="action" name="reCal:"/>
+                <relationship kind="outlet" name="infoText" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="infoView" candidateClass="UIWebView"/>
             </relationships>
         </class>
